main.css
.cm-lkcampbell-indent-guides {
    position: relative;
}

.cm-lkcampbell-indent-guides:before {
    content: "";
    position: absolute;
    display: block;
    top: 0;
    height: 2.5ex;
    width: 1px;
    background-color: rgba(128, 128, 128, 0.5);
}

